--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 
 *.vsidx
+*.log
+*.log
+PLCHelperStation/PLCHelperStation/bin/Debug/net8.0/logs/2025-02-11.log
+PLCHelperStation/PLCHelperStation/bin/Debug/net8.0/logs/2025-02-11.log
