--- a/PLCHelperStation/PLCHelperStation/PLCHelperStation.csproj
+++ b/PLCHelperStation/PLCHelperStation/PLCHelperStation.csproj
@@ -23,6 +23,7 @@
     <PackageReference Include="NLog.Database" Version="5.4.0" />
     <PackageReference Include="NLog.Extensions.Logging" Version="5.4.0" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="5.4.0" />
+    <PackageReference Include="NModbus" Version="3.0.81" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
