前后端modbus模块-实时读取modbus数据点

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@
 *.log
 PLCHelperStation/PLCHelperStation/bin/Debug/net8.0/logs/2025-02-11.log
 PLCHelperStation/PLCHelperStation/bin/Debug/net8.0/logs/2025-02-11.log
+PLCHelperStation/PLCHelperStation/bin/Debug/net8.0/logs/2025-02-11.log
+PLCHelperStation/PLCHelperStation/bin/Debug/net8.0/logs/2025-02-11.log
+*.log
+PLCHelperStation/PLCHelperStation/bin/Debug/net8.0/logs/2025-02-11.log
+*.log
