--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ PLCHelperStation/PLCHelperStation/bin/Debug/net8.0/logs/2025-02-11.log
 *.log
 PLCHelperStation/PLCHelperStation/bin/Debug/net8.0/logs/2025-02-11.log
 *.log
+PLCHelperStation/PLCHelperStation/bin/Debug/net8.0/logs/2025-02-11.log
